2003-08-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c:
	* minefield.h:
	Take the random number generator out of _randomize and make it a
	property of the widget.
	
	* minefield.h:
	* gnomine.c: Added support for giving a hint. If possible a spot
	adjacent to a mine is cleared and a ten-second penalty is
	imposed. If not then a helpful (?) message is given. This was
	suggested by Juhani Heino <juhani.heino@1posti.net>.

2003-08-11  William Jon McCann  <mccann@jhu.edu>

	* gnomine.c:
	* minefield.c: Added license header comments.

	* gnomine.c (new_game): Make the game window stay the
	same size when the dimensions of the field change.

2003-08-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Make a little more compatible
	with automake-1.7.

2003-07-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_init): Made the assignments from
	Steve's patch slightly more explicit. This is just a matter of
	style and pedanticism.

2003-07-24  Steve Chaplin
	* minefield.h: Add a field to struct _Sign to hold a pixbuf.

	* minefield.c (_setup_sign): Check for error when reading pixbuf.
	Read each pixbuf from file just once, not at every expose event.
	(gtk_minefield_init): Initialise the pixbuf pointers,

2003-07-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.desktop.in (_Comment): Typo, see bug #117235.

2003-07-16  William Jon McCann  <mccann@jhu.edu>

	* minefield.c (gtk_minefield_size_allocate): ANSI C build fix.

2003-07-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.desktop.in: Update name to fit HIG (bug 116916).

2003-07-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gtkmfframe.c: 
	* gtkmfframe.h:
	Removed since they are unnecessary.
	
	* gnomine.c (new_game): Add a conditional on the resizing code so
	the window is only resized if the grid size changes, this prevents
	unexpected window shrinkage when starting a new game and there was